AC_INIT(configure.in)

RELEASE=1
AC_SUBST(RELEASE)
AM_INIT_AUTOMAKE(strip-conduit, 0.1)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE
AM_ACLOCAL_INCLUDE(macros)

GNOME_COMMON_INIT
GNOME_INIT

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CPP
AC_STDC_HEADERS
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

dnl ## internationalization support
ALL_LINGUAS=""
AM_GNOME_GETTEXT

GNOME_INIT(capplet)
GNOME_PILOT_HOOK(0.9.3,[],failure)
GNOME_XML_CHECK

AC_SUBST(CAPPLET_LIBS)

AC_OUTPUT(Makefile)
